--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title> Lab 3 </title>
 </head>
 <body>
-
+  <h1> Volunteer Form </h1>
+  <form method="POST" action="http://kriedan@bloomingdale.sat.iit.edu/kriedan/formdemoscript.php" enctype="multipart/form-data">
+    <fieldset>
+      <legend> My info </legend>
+    </fieldset>
+  </form>
 </body>
 </html>
