--- a/index.html
+++ b/index.html
@@ -6,10 +6,32 @@
 </head>
 <body>
   <h1> Volunteer Form </h1>
-  <form method="POST" action="http://kriedan@bloomingdale.sat.iit.edu/kriedan/formdemoscript.php" enctype="multipart/form-data">
-    <fieldset>
-      <legend> My info </legend>
+  <form method="POST" action="http://kriedan@bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" enctype="multipart/form-data">
+    <p><strong> My info </strong></p>
+	<fieldset>
+	  <p>
+	    <label> First Name: <input type="text" name="first_name_field" ></label>
+	  </p>
+	  
+	  <p>
+	    <label> Last Name: <input type="text" name="last_name_field" ></label>  
+	  </p>
+	  
+	  <p>
+	    <label> Phone Number: <input type="text" name="phone_number_field"></label>  
+	  </p>
+	  
+	   <p>
+	    <label> Email Address: <input type="text" name="email_address_field"></label>  
+	  </p>
+	  
+	   <p>
+	    <label> Gender: </label>
+		<label> Male <input type="radio" name="radio_field"></label>
+		<label> Female <input type="radio" name="radio_field"></label>
+	  </p>
     </fieldset>
+	<input type="submit" value="Send Me">
   </form>
 </body>
 </html>
