--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
 	  </p>
 	  
 	  <p>
-	    <label> Phone Number: <input type="text" name="phone_number_field"></label>  
+	    <label> Phone Number: <input type="text" name="phone_field"></label>  
 	  </p>
 	  
 	   <p>
-	    <label> Email Address: <input type="text" name="email_address_field"></label>  
+	    <label> Email Address: <input type="text" name="email_field"></label>  
 	  </p>
 	  
 	   <p>
 	    <label> Gender: </label>
-		<label> Male <input type="radio" name="radio_field"></label>
-		<label> Female <input type="radio" name="radio_field"></label>
+		<label> Male <input type="radio" name="radio_field" value="m"></label>
+		<label> Female <input type="radio" name="radio_field" value="f"></label>
 	  </p>
     </fieldset>
 	<input type="submit" value="Send Me">
