--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	  
 	   <p>
 	    <label> Gender: </label>
-		<label> Male <input type="radio" name="radio_field" value="m"></label>
-		<label> Female <input type="radio" name="radio_field" value="f"></label>
+		<label> Male <input type="radio" name="gender_field" value="m"></label>
+		<label> Female <input type="radio" name="gender_field" value="f"></label>
 	  </p>
     </fieldset>
 	<input type="submit" value="Send Me">
