--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
 	  
 	   <p>
 	    <label> Gender: </label>
-		<label> Male <input type="radio" name="gender_field" value="m"></label>
-		<label> Female <input type="radio" name="gender_field" value="f"></label>
+	    <label> Male <input type="radio" name="gender_field" value="m"></label>
+	    <label> Female <input type="radio" name="gender_field" value="f"></label>
+	  </p>
+	  
+	  <p>
+	    <label> Age: </label>
+            <select>
+              <option value="a"> Under 18 </option>
+	      <option value="b"> 18 - 24 </option>
+	      <option value="c"> 25 - 34 </option>
+	    </select>
 	  </p>
     </fieldset>
 	<input type="submit" value="Send Me">
