--- a/index.html
+++ b/index.html
@@ -33,13 +33,18 @@
 	  
 	  <p>
 	    <label> Age: </label>
-            <select>
+            <select name="age_field">
               <option value="a"> Under 18 </option>
 	      <option value="b"> 18 - 24 </option>
 	      <option value="c"> 25 - 34 </option>
+	      <option value="d"> 35 - 44 </option>
+	      <option value="e"> 45 - 54 </option>
+	      <option value="f"> 55 - 64 </option>
+	      <option value="g"> 65 and over </option>
 	    </select>
 	  </p>
     </fieldset>
+    
 	<input type="submit" value="Send Me">
   </form>
 </body>
