--- a/index.html
+++ b/index.html
@@ -8,44 +8,47 @@
   <h1> Volunteer Form </h1>
   <form method="POST" action="http://kriedan@bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" enctype="multipart/form-data">
     <p><strong> My info </strong></p>
-	<fieldset>
-	  <p>
-	    <label> First Name: <input type="text" name="first_name_field" ></label>
-	  </p>
+    <fieldset>
+      <p>
+	<label> First Name: <input type="text" name="first_name_field" ></label>
+      </p>
 	  
-	  <p>
-	    <label> Last Name: <input type="text" name="last_name_field" ></label>  
-	  </p>
+      <p>
+	<label> Last Name: <input type="text" name="last_name_field" ></label>  
+      </p>
 	  
-	  <p>
-	    <label> Phone Number: <input type="text" name="phone_field"></label>  
-	  </p>
+      <p>
+	<label> Phone Number: <input type="text" name="phone_field"></label>  
+      </p>
+      
+      <p>
+	<label> Email Address: <input type="text" name="email_field"></label>  
+      </p>
 	  
-	   <p>
-	    <label> Email Address: <input type="text" name="email_field"></label>  
-	  </p>
+      <p>
+	<label> Gender: </label>
+	<label> Male <input type="radio" name="gender_field" value="m"></label>
+	<label> Female <input type="radio" name="gender_field" value="f"></label>
+      </p>
 	  
-	   <p>
-	    <label> Gender: </label>
-	    <label> Male <input type="radio" name="gender_field" value="m"></label>
-	    <label> Female <input type="radio" name="gender_field" value="f"></label>
-	  </p>
-	  
-	  <p>
-	    <label> Age: </label>
-            <select name="age_field">
-              <option value="a"> Under 18 </option>
-	      <option value="b"> 18 - 24 </option>
-	      <option value="c"> 25 - 34 </option>
-	      <option value="d"> 35 - 44 </option>
-	      <option value="e"> 45 - 54 </option>
-	      <option value="f"> 55 - 64 </option>
-	      <option value="g"> 65 and over </option>
-	    </select>
-	  </p>
+      <p>
+	<label> Age: </label>
+        <select name="age_field">
+          <option value="a"> Under 18 </option>
+	  <option value="b"> 18 - 24 </option>
+	  <option value="c"> 25 - 34 </option>
+	  <option value="d"> 35 - 44 </option>
+	  <option value="e"> 45 - 54 </option>
+	  <option value="f"> 55 - 64 </option>
+	  <option value="g"> 65 and over </option>
+	</select>
+      </p>
     </fieldset>
-    
-	<input type="submit" value="Send Me">
+    <p><strong> My Availability </strong></p>
+    <fieldset>
+      <label> Days Available: </label>	    
+    </fieldset>
+    <input type="submit" value="Send Me">
   </form>
 </body>
 </html>
