--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1> Volunteer Form </h1>
   <form method="POST" action="http://kriedan@bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" enctype="multipart/form-data">
-    <p><strong> My info </strong></p>
+    <strong> My info </strong>
     <fieldset>
       <p>
 	<label> First Name: <input type="text" name="first_name_field" ></label>
@@ -44,7 +44,7 @@
 	</select>
       </p>
     </fieldset>
-    <p><strong> My Availability </strong></p>
+    <strong> My Availability </strong>
     <fieldset>
       <label> Days Available: </label>	    
     </fieldset>
