--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
     </fieldset>
     <strong> My Availability </strong>
     <fieldset>
-      <label> Days Available: </label>	    
+      <label> Days Available: </label>	  
+      <p>
+        <label> <input type="checkbox" name="available_field" value="Su"> Sunday </label>
+      </p>
     </fieldset>
     <input type="submit" value="Send Me">
   </form>
