--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
       <label> Days Available: </label>	  
       <p>
         <label> <input type="checkbox" name="available_field" value="Su"> Sunday </label>
+	      <label> <input type="checkbox" name="available_field" value="Mon"> Monday </label>
+        <label> <input type="checkbox" name="available_field" value="Tu"> Tuesday </label>
+        <label> <input type="checkbox" name="available_field" value="Wed"> Wednesday </label>
+	      <label> <input type="checkbox" name="available_field" value="Th"> Thursday </label>
+        <label> <input type="checkbox" name="available_field" value="Fri"> Friday </label>
+        <label> <input type="checkbox" name="available_field" value="Sat"> Saturday </label>
       </p>
     </fieldset>
     <input type="submit" value="Send Me">
