--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
     <fieldset>
       <label> Days Available: </label>	  
       <p>      
-        <label> <input type="checkbox" name="available_field" value="Su"> Sunday </label>
+        <label> <input type="checkbox" name="available_field[]" value="Su"> Sunday </label>
       </p>
 	    <p>      
-        <label> <input type="checkbox" name="available_field" value="Mon"> Monday </label>
+        <label> <input type="checkbox" name="available_field[]" value="Mon"> Monday </label>
       </p>
       <p>      
-        <label> <input type="checkbox" name="available_field" value="Tu"> Tuesday </label>
+        <label> <input type="checkbox" name="available_field[]" value="Tu"> Tuesday </label>
       </p>
       <p>      
-        <label> <input type="checkbox" name="available_field" value="Wed"> Wednesday </label>
+        <label> <input type="checkbox" name="available_field[]" value="Wed"> Wednesday </label>
       </p>
 	    <p>      
-        <label> <input type="checkbox" name="available_field" value="Th"> Thursday </label>
+        <label> <input type="checkbox" name="available_field[]" value="Th"> Thursday </label>
       </p>
       <p>      
-        <label> <input type="checkbox" name="available_field" value="Fri"> Friday </label>
+        <label> <input type="checkbox" name="available_field[]" value="Fri"> Friday </label>
       </p>
       <p>      
-        <label> <input type="checkbox" name="available_field" value="Sat"> Saturday </label>
+        <label> <input type="checkbox" name="available_field[]" value="Sat"> Saturday </label>
       </p>
       
     </fieldset>
