--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
         <label> <input type="checkbox" name="available_field[]" value="Sat"> Saturday </label>
       </p>
       
+	    <label> Any Comments? </label>
+      
+      <p>
+        <textarea cols="30" rows="10" name="textarea_field"></textarea>
+      </p>
     </fieldset>
     <input type="submit" value="Send Me">
   </form>
