--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         
         <label> Any Comments? </label>
         <p>
-          <textarea cols="30" rows="10" name="textarea_field"></textarea>
+          <textarea cols="30" rows="10" name="comments_field"></textarea>
         </p>
       </fieldset>
     </div>
