--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <p>
       <input type="submit" value="Send Me">
     </p>
+    <input type="hidden" name="hidden_field" value="mkahack@hawk.iit.edu">
   </form>
   </body>
 </html>
