--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1> Volunteer Form </h1>
   <form method="POST" action="http://kriedan@bloomingdale.sat.iit.edu/kriedan/lab3formscript.php" enctype="multipart/form-data">
     <div id="first_fieldset">
-      <strong> My info </strong>
+      <legend><strong> My info </strong></legend>
       <fieldset>
         <p>
           <label> First Name: <input type="text" name="first_name_field" ></label>
@@ -47,7 +47,7 @@
       </fieldset>
     </div>
     <div id="second_fieldset">
-      <strong> My Availability </strong>
+      <legend><strong> My Availability </strong></legend>
       <fieldset>
         <label> Days Available: </label>
         <p>
